--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django = "^5.1.2"
 django-rest-framework = "^0.1.0"
 django-extensions = "^3.2.3"
 django-debug-toolbar = "^4.4.6"
+psycopg2-binary = "^2.9.10"
 
 
 [build-system]
