--- a/.github/workflows/workflow-pr.yml
+++ b/.github/workflows/workflow-pr.yml
@@ -1,35 +1,34 @@
 name: Python Pull Request Workflow
 on: [pull_request]
 jobs:
-
   qa:
     name: Quality check
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@master
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.8
-      - name: Install poetry
+          python-version: '3.8'
+
+      - name: Install Poetry
         run: |
           pip install -U pip
           pip install poetry
-          poetry install
         env:
-          POETRY_VIRTUALENVS_CREATE: false
+          POETRY_VIRTUALENVS_CREATE: false 
+
+      - name: Install dependencies
+        run: poetry install
 
       - name: View poetry --help
         run: poetry --help
 
-      - name: Install dependencies
-        shell: bash
-        run: python -m poetry install
-
       - name: Test
         run: |
           poetry run python manage.py test
-      - name: Wemake Python Stylguide
+
+      - name: Wemake Python Styleguide
         uses: wemake-services/wemake-python-styleguide@0.16.0
         continue-on-error: true
         with:
