--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django-rest-framework = "^0.1.0"
 django-extensions = "^3.2.3"
 django-debug-toolbar = "^4.4.6"
 psycopg2-binary = "^2.9.10"
+gitpython = "^3.1.43"
 
 
 [build-system]
